added line-height for textarea and hover style for back link

--- a/src/ContactForm/Nav/Nav.css
+++ b/src/ContactForm/Nav/Nav.css
@@ -1,9 +1,10 @@
 .nav {
   color: white;
+  text-decoration: none;
 }
 
 .nav:hover {
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .nav-container {
