--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,15 @@ body {
   }
 }
 
-@media (max-width: 800px) {
+@media (min-width: 501px) and (max-width: 800px) {
   .App {
     width: 90%;
+  }
+}
+
+@media (max-width: 500px) {
+  .App {
+    width: 100%;
   }
 }
 
